[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commandlayer"
version = "1.0.0"
description = "CommandLayer Python SDK — semantic verbs, typed schemas, signed receipts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CommandLayer", email = "security@commandlayer.org" }]
keywords = ["commandlayer", "agents", "receipts", "x402", "ens", "schema"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Security :: Cryptography",
]

dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "jsonschema>=4.21.0",
  "pynacl>=1.5.0",
  "eth-abi>=5.0.0",
  "eth-utils>=4.0.0",
  "web3>=6.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "build>=1.1.0",
  "twine>=5.0.0",
]

[project.urls]
Homepage = "https://commandlayer.org"
Documentation = "https://commandlayer.org/docs.html"
Repository = "https://github.com/commandlayer"
Issues = "https://github.com/commandlayer/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["commandlayer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
